HTML skeleton and CSS body

--- a/index.html
+++ b/index.html
@@ -1,9 +1,85 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>The Tea Cozy</title>
-  <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>The Tea Cozy</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
-  <body>
-  </body>
+
+<body>
+    <header>
+        <div class="Header">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="logo" />
+            <u>Mission</u><u>Featured Tea</u><u>Locations</u>
+        </div>
+    </header>
+
+
+    <div class="Mission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Crafted, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+
+
+    <div class="Mothly">
+        <h2>Tea of the month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+    </div>
+    <div class="MonthlyImages">
+        <div class="image" id="img1">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg">
+            <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="image" id="img2">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+            <span>Spiced Rum Tea</span>
+        </div>
+        <div class="image" id="img3">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg">
+            <span>Seasonal Donuts</span>
+        </div>
+        <div class="image" id="img4">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+            <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="image" id="img5">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+            <span>Bedford Bizarre Tea</span>
+        </div>
+    </div>
+
+    <div class="Locations">
+        <div id="downtown">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+        </div>
+
+        <div id="East Bayside"> 
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+        </div>
+
+        <div id="Oakdale">
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+        </div>
+    </div>
+
+
+    <footer>
+
+        <h2>The Tea Cozy<h2>
+        <h5>
+            contact@theteacozy.com
+
+            917-555-8905
+        </h5>
+    </footer>
+</body>
+
 </html>
