finished html skele, header css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header>
         <div class="Header">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="logo" />
-            <u>Mission</u><u>Featured Tea</u><u>Locations</u>
+        </div>
+        <div>
+            <h1>Mission</h1>
+            <h1>Featured Tea</h1>
+            <h1>Locations</h1>
         </div>
     </header>
 
@@ -56,7 +60,7 @@
             <p>Portland, Maine</p>
         </div>
 
-        <div id="East Bayside"> 
+        <div id="East Bayside">
             <h3>East Bayside</h3>
             <p>3433 Phisherman's Avenue</p>
             <p>(Northwest Corner)</p>
@@ -71,14 +75,17 @@
     </div>
 
 
-    <footer>
-
+    <div class="contact">
         <h2>The Tea Cozy<h2>
-        <h5>
-            contact@theteacozy.com
+                <h5>
+                    contact@theteacozy.com
 
-            917-555-8905
-        </h5>
+                    917-555-8905
+                </h5>
+    </div>
+
+    <footer>
+        <p>&copy; The Tea Cozy 2017</p>
     </footer>
 </body>
 
